# Harmony_Scheduler-KPI

./: .gitignore  ReadMe.md  docker-compose.yml  package-lock.json
.dev/: dev.ps1  reset_db.ps1
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: ReadMe-Backend.md  config.py  database.py  env.py  kpis.py  main.py  models.py  schemas.py  validation.py
backend/app/adapters/: ReadMe_client_a.md  base.py  client_a.md  client_a.py
backend/app/api/: _router_factory.py  errors.py  schedule.py
backend/app/constraints/: ConstraintDesign_README.md  README.md  __init__.py  base.py  calendar.py  changeover.py  duration.py  eligibility.py  horizon.py  no_overlap.py  precedence.py
backend/app/domain/: problem.py  solution.py
backend/app/objectives/: ObjectiveDesign_Readme.md  __init__.py  base.py  max_family_batching.py  min_changeovers.py  min_makespan.py  min_tardiness.py
backend/app/solvers/: _diagnostics.py  _op_vars.py  _time.py  base.py  cpsat.py  helpers.py  test_solver_REMOVE.py
backend/tests/: conftest.py  test_api.py  test_kpis.py  test_validation.py
backend/tests/example_data/: complex_a.json  example_a.json  force_tardy.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  DataButton.tsx  Gantt.tsx  api.tsx  exampleData.tsx  index.css  main.tsx
