[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "ortools>=9.15.6755",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
